# MQ2Nav

./: .gitignore  Changes.md  DebugDrawDX.h  DoorAdjustments.txt  ImGuiDX9.cpp  ImGuiRenderer.cpp  ImGuiRenderer.h  KeybindHandler.cpp  KeybindHandler.h  MQ2Nav.sln  MQ2Nav.vcxproj  MQ2Nav.vcxproj.filters  MQ2NavKeyBinds.h  MQ2NavSettings.h  MQ2NavUtil.h  MQ2NavWaypoints.h  MQ2Nav_Hooks.cpp  MQ2Nav_Hooks.h  MQ2Nav_Input.cpp  MQ2Nav_Input.h  MQ2Nav_KeyBinds.cpp  MQ2Nav_KeyBinds.h  MQ2Nav_MeshLoader.cpp  MQ2Nav_MeshLoader.h  MQ2Nav_Render.cpp  MQ2Nav_Render.h  MQ2Nav_Settings.cpp  MQ2Nav_Settings.h  MQ2Nav_Util.h  MQ2Nav_Waypoints.cpp  MQ2Nav_Waypoints.h  MQ2Navigation.cpp  MQ2Navigation.h  MQ2Navigation.rc  MQ2Navigation.vcxproj  MQ2Navigation.vcxproj.filters  MQ2Navigation_Main.cpp  MQ2Navigation_Render.cpp  MQ2Navigation_Render.h  MeshLoader.cpp  (+38 more)
.github/: copilot-instructions.md
EQNavigation/: ChunkyTriMesh.cpp  ChunkyTriMesh.h  ConvexVolumeTool.cpp  CrowdTool.cpp  CrowdTool.h  EQConfig.cpp  EQConfig.h  EQNavigation.cpp  EQNavigation.vcxproj  EQNavigation.vcxproj.filters  InputGeom.cpp  InputGeom.h  Interface.cpp  Interface.h  MapGeometryLoader.cpp  MapGeometryLoader.h  NavMeshPruneTool.cpp  NavMeshTesterTool.cpp  NavMeshTesterTool.h  OffMeshConnectionTool.cpp  Sample.cpp  SampleInterfaces.cpp  Sample_Debug.cpp  Sample_TileMesh.cpp  Sample_TileMesh.h  ValueHistory.cpp  ValueHistory.h  Zones.ini  imgui.cpp  imguiRenderGL.cpp  main.cpp  pch.h  stdafx.cpp  targetver.h
MeshGenerator/: Application.cpp  Application.h  ChunkyTriMesh.cpp  ChunkyTriMesh.h  ConvexVolumeTool.cpp  ConvexVolumeTool.h  CrowdTool.cpp  CrowdTool.h  EQConfig.cpp  EQConfig.h  ImGuiSDL.cpp  ImGuiSDL.h  InputGeom.cpp  InputGeom.h  Interface.cpp  Interface.h  MapGeometryLoader.cpp  MapGeometryLoader.h  MeshGenerator.rc  MeshGenerator.vcxproj  MeshGenerator.vcxproj.filters  NavMeshData.h  NavMeshFile.cpp  NavMeshFile.h  NavMeshPruneTool.cpp  NavMeshPruneTool.h  NavMeshTesterTool.cpp  NavMeshTesterTool.h  NavMeshTileTool.cpp  NavMeshTileTool.h  NavMeshTool.cpp  NavMeshTool.h  OffMeshConnectionTool.cpp  OffMeshConnectionTool.h  Sample.cpp  Sample.h  SampleInterfaces.cpp  SampleInterfaces.h  Sample_TileMesh.cpp  Sample_TileMesh.h  (+7 more)
azone2/: azone2.vcxproj
cli/: MQ2Nav_ConsoleTool.vcxproj  MQ2Nav_ConsoleTool.vcxproj.filters  Main.cpp  packages.config  vcpkg_mq.txt
common/: Context.h  FindPattern.cpp  FindPattern.h  Formatters.h  JsonProto.cpp  JsonProto.h  Logging.h  MQ2Nav_Common.vcxproj  MQ2Nav_Common.vcxproj.filters  MathUtil.h  NavMesh.cpp  NavMesh.h  NavMeshBuilder.cpp  NavMeshBuilder.h  NavMeshData.cpp  NavMeshData.h  NavMeshFactory.cpp  NavMeshFactory.h  NavModule.h  NavigationRoute.cpp  NavigationRoute.h  Navigator.cpp  Navigator.h  Utilities.cpp  Utilities.h  ZoneData.cpp  ZoneData.h  common.vcxproj  common.vcxproj.filters  compression.h  enum.h  eqemu_endian.h  eqg_geometry.h  eqg_invis_wall.h  eqg_loader.cpp  eqg_model_loader.cpp  eqg_structs.h  eqg_terrain.h  eqg_v4_loader.cpp  eqg_water_sheet.h  (+21 more)
dependencies/zone-utilities/: .gitignore  .travis.yml  CMakeLists.txt  README.md  vcpkg_mq.txt  zone-utilities.cpp  zone-utilities.vcxproj  zone-utilities.vcxproj.filters
dependencies/zone-utilities/awater/: CMakeLists.txt  awater.cpp  water_map.cpp  water_map.h
dependencies/zone-utilities/azone/: CMakeLists.txt  azone.cpp  map.h
dependencies/zone-utilities/common/: CMakeLists.txt  any.h  buffer_reader.h  compression.cpp  compression.h  container_util.h  eqg_geometry.h  eqg_invis_wall.h  eqg_loader.cpp  eqg_loader.h  eqg_material.h  eqg_model_loader.cpp  eqg_model_loader.h  eqg_region.h  eqg_structs.h  eqg_terrain.h  eqg_terrain_tile.h  eqg_v4_loader.cpp  eqg_v4_loader.h  light.h  octree.h  oriented_bounding_box.cpp  oriented_bounding_box.h  pfs.cpp  pfs.h  pfs_crc.cpp  pfs_crc.h  placeable.h  placeable_group.h  read_buffer.h  s3d_geometry.h  s3d_loader.cpp  s3d_loader.h  s3d_texture.h  s3d_texture_brush_set.h  s3d_types.h  safe_alloc.h  str_util.h  string_util.cpp  string_util.h  (+10 more)
dependencies/zone-utilities/dependencies/: .gitignore  CMakeLists.txt
dependencies/zone-utilities/dependencies/glew/: CMakeLists.txt
dependencies/zone-utilities/dependencies/glew/src/: CMakeLists.txt
dependencies/zone-utilities/dependencies/glfw/: ALTERED_FOR_EQEMU.txt  CMakeLists.txt
dependencies/zone-utilities/dependencies/libwebsockets/: CMakeLists.txt
dependencies/zone-utilities/eqglib/: archive.cpp  archive.h  buffer_reader.h  compression.cpp  container_util.h  eqg_animation.cpp  eqg_animation.h  eqg_geometry.cpp  eqg_geometry.h  eqg_global_data.cpp  eqg_global_data.h  eqg_light.cpp  eqg_light.h  eqg_loader.cpp  eqg_loader.h  eqg_material.cpp  eqg_material.h  eqg_math.h  eqg_model_loader.cpp  eqg_particles.cpp  eqg_particles.h  eqg_resource.h  eqg_resource_manager.cpp  eqg_resource_manager.h  eqg_structs.h  eqg_terrain.cpp  eqg_terrain.h  eqg_terrain_loader.cpp  eqg_terrain_loader.h  eqg_types_fwd.h  eqglib.h  light.h  octree.h  oriented_bounding_box.cpp  oriented_bounding_box.h  pch.h  pfs.cpp  pfs_crc.cpp  pfs_crc.h  placeable.h  (+10 more)
dependencies/zone-utilities/imgui/: CMakeLists.txt
dependencies/zone-utilities/log/: CMakeLists.txt  log_base.h  log_file.cpp  log_file.h  log_macros.h  log_manager.h  log_stdout.h  log_types.h
dependencies/zone-utilities/map_info/: CMakeLists.txt  main.cpp
dependencies/zone-utilities/map_view/: CMakeLists.txt  camera.cpp  camera.h  imgui_gflw.cpp  main.cpp  map.cpp  map.h  model.cpp  model.h  navigation.cpp  navigation.h  recast_chunky_mesh.cpp  shader.cpp  shader.h  zone.cpp  zone.h
dependencies/zone-utilities/map_view/shaders/: basic.frag  basic.vert  basic130.frag  basic130.vert  overlay.frag  overlay.vert  overlay130.frag  overlay130.vert
dependencies/zone-utilities/pfs/: CMakeLists.txt  main.cpp
eqglib/: eqg_animation.cpp  eqg_animation.h  eqg_geometry.cpp  eqg_geometry.h  eqg_global_data.cpp  eqg_global_data.h  eqg_light.h  eqg_loader.cpp  eqg_loader.h  eqg_material.cpp  eqg_material.h  eqg_particles.cpp  eqg_particles.h  eqg_resource_manager.cpp  eqg_terrain.cpp  (+17 more)
(+483 files in other folders)
