CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(pfs_sources
	main.cpp
)

SET(pfs_headers
)

ADD_EXECUTABLE(pfs ${pfs_sources} ${pfs_headers})

INSTALL(TARGETS pfs RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX})

TARGET_LINK_LIBRARIES(pfs common log ${ZLIB_LIBRARY})

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)